# genesis

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  app.toml  genesis-goal-tracker.html
.github/workflows/: ci.yml
.progress/: 001_20260611_111015_vision-completion.md
.proofs/: 2026-06-16-genesis-large-upload-pack-streaming.md  2026-06-16-genesis-main-sync.md  2026-06-18-paw-agent-upload-pack-fuel.md
apps/agent-answers/: APP.md  app.toml
apps/agent-answers-evaluation/: APP.md  app.toml
apps/agent-answers-evaluation/adrs/: 0001-independent-evaluator-lineage.md
apps/agent-answers-evaluation/policies/: evaluation.cedar
apps/agent-answers-evaluation/specs/: metric_definition.ioa.toml  model.csdl.xml  trial_metric_definition.ioa.toml  trial_suite.ioa.toml  validator_run.ioa.toml
apps/agent-answers-evaluation/wasm/: build.sh
apps/agent-answers/adrs/: 0001-small-seed-organism.md
apps/agent-answers/policies/: agent_answers.cedar
apps/agent-answers/specs/: answer.ioa.toml  model.csdl.xml  question.ioa.toml
apps/directed-evolution/: APP.md  app.toml
apps/directed-evolution/adrs/: 0001-native-directed-evolution-protocol.md
apps/directed-evolution/policies/: directed_evolution.cedar  evolution.cedar
apps/directed-evolution/specs/: adaptation_goal.ioa.toml  autonomy_policy.ioa.toml  campaign.ioa.toml  candidate.ioa.toml  direction.ioa.toml  elimination_rule.ioa.toml  emergent_capability.ioa.toml  episode.ioa.toml  episode_start_request.ioa.toml  evaluation_stage.ioa.toml  evidence_artifact.ioa.toml  generation.ioa.toml  intervention.ioa.toml  lineage_edge.ioa.toml  measurement.ioa.toml  metric_definition.ioa.toml  model.csdl.xml  mutation.ioa.toml  organism.ioa.toml  organism_version.ioa.toml  pressure.ioa.toml  promotion.ioa.toml  scoring_rule.ioa.toml  selection_design.ioa.toml  selection_pressure.ioa.toml  selection_protocol.ioa.toml  signal.ioa.toml  signal_scout.ioa.toml  stage_result.ioa.toml  (+6 more)
crates/git_auth/: Cargo.toml
crates/git_auth/src/: lib.rs
crates/git_object/: Cargo.toml
crates/git_object/tests/: git_parity.rs
docs/: PARITY.md  PERFORMANCE.md
docs/adr/: 0002-temper-native-version-control.md  0009-genesis-only-app-install-and-restart-recovery.md  0010-agent-app-repair-and-version-evolution.md  0010-stream-thin-pack-base-object-reads.md  0011-directed-evolution-engine-in-genesis.md  0011-genesis-bundle-install-and-clone-performance.md  0011-stream-upload-pack-object-reads.md  0012-directed-evolution-mission-control.md  0013-directed-evolution-hot-load.md  0014-directed-evolution-generation-topology.md  0015-directed-evolution-organism-genealogy.md  0016-directed-evolution-contract-and-selection-surface.md  0017-directed-evolution-gap-closure.md  0018-directed-evolution-gap-closure-proof-surfaces.md  0019-canonical-genesis-paw-orchestration.md  0020-idempotent-genesis-app-install.md  0021-genesis-ci-proof-gates.md  0022-seed-journey-usage-observability.md  0023-external-directed-evolution-runtime-targets.md  0024-server-side-merge-strategies.md  0025-push-auth-and-force-classification.md  0026-organism-runtime-targets.md  0027-blob-content-in-object-store.md  0028-upload-pack-fuel-budget-for-agent-apps.md  0029-receive-pack-legacy-delta-base-cache.md  README.md
docs/directed-evolution/: e2e-runbook.md  fitness-compiler.md  v1-fitness-spec.json
docs/learn/: genesis.html
docs/rfc/: 0001-architecture.md  0002-push-and-clone.md  0003-genesis-app-registry.md  0004-github-workflow-layer.md  0005-directed-evolution.md  README.md
policies/: app.cedar  evolution.cedar  git_token.cedar  http_endpoint.cedar  objects.cedar  pull_request.cedar  ref.cedar  repository.cedar  review.cedar  wasm.cedar
policies/commons/: app.cedar  owner.cedar
registry/: Cargo.toml
registry/src/: lib.rs
scripts/: bench-genesis-vs-github.sh  check-wasm-boundaries.sh  live-commons-tenant-mixed-stress-smoke.sh  live-genesis-clone-performance-smoke.sh  live-genesis-install-e2e-smoke.sh  live-github-workflow-smoke.sh  live-ingestpack-concurrency-smoke.sh  live-ingestpack-high-volume-smoke.sh  local-directed-evolution-lineage-smoke.sh  run-evolution-e2e.sh
specs/: app.ioa.toml  app_installation.ioa.toml  blob.ioa.toml  commit.ioa.toml  evolution.ioa.toml  fitness_spec.ioa.toml  http_endpoint.ioa.toml  model.csdl.xml  owner.ioa.toml  pull_request.ioa.toml  repository.ioa.toml  stage_result.ioa.toml  tag.ioa.toml  tree.ioa.toml  tree_entry.ioa.toml  variant.ioa.toml
wasm-modules/git_receive_pack/: Cargo.toml
wasm-modules/git_refs_advertise/: Cargo.toml
wasm-modules/scm_ingest_pack/: Cargo.toml
wasm/app_registry/: Cargo.toml  app_registry.wasm
wasm/app_registry/src/: lib.rs
wasm/gen_variant/: Cargo.toml
wasm/gen_variant/src/: lib.rs
wasm/git_receive_pack/: Cargo.toml  git_receive_pack.wasm
wasm/git_receive_pack/src/: lib.rs
wasm/git_refs_advertise/: Cargo.toml  git_refs_advertise.wasm
wasm/git_refs_advertise/src/: auth.rs  lib.rs
wasm/git_upload_pack/: Cargo.toml  git_upload_pack.wasm
wasm/git_upload_pack/src/: lib.rs
wasm/github_rest_pulls/: Cargo.toml  github_rest_pulls.wasm
wasm/github_rest_refs/: Cargo.toml  github_rest_refs.wasm
wasm/github_rest_refs/fixtures/: branch.json
wasm/github_rest_refs/src/: gh.rs  handlers.rs  http.rs  lib.rs  odata.rs  shape.rs
wasm/github_rest_repos/: Cargo.toml  github_rest_repos.wasm
wasm/merge_variant/: Cargo.toml
wasm/run_stage_caller/: Cargo.toml
wasm/run_stage_caller/src/: lib.rs
wasm/scm_assign_pr_number/: Cargo.toml  scm_assign_pr_number.wasm
wasm/scm_assign_pr_number/src/: lib.rs
wasm/scm_ingest_pack/: Cargo.toml  scm_ingest_pack.wasm
wasm/scm_merge_pr/: Cargo.toml  scm_merge_pr.wasm
wasm/scm_merge_pr/src/: commits.rs  lib.rs  merge_base.rs  odata.rs  parity_tests.rs  request.rs  sub_writes.rs  tree_merge.rs  unit_tests.rs
wasm/select_winner/: Cargo.toml
web/: package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
web/scripts/: studio-screenshot.mjs
web/src/: app.css  app.html
wire/src/: capabilities.rs
(+129 files in other folders)
