# temper-git workspace.
#
# Contains:
#   * `crates/git_object/` — byte-exact git object serialization +
#                      SHA-1 hashing. Pure Rust helper code linked into
#                      the runtime WASM integrations.
#   * `wasm/*/` — each runtime integration is a separate cdylib crate
#                      packaged with its shipped .wasm artifact.
#
# Temper's own workspace (at `temper/`) is a submodule — not a workspace
# member. Our WASM modules depend on `temper-wasm-sdk` from there via
# path; the temper kernel itself builds independently via its own Cargo.

[workspace]
resolver = "2"
members = [
    "registry",
    "wire",
    "crates/git_object",
    "wasm/git_refs_advertise",
    "wasm/app_registry",
    "wasm/scm_ingest_pack",
    "wasm/git_upload_pack",
    "wasm/git_receive_pack",
    "wasm/gen_variant",
    "wasm/run_stage_caller",
    "wasm/select_winner",
    "wasm/merge_variant",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nerdsane/temper-git"

[workspace.dependencies]
# Temper WASM SDK — referenced from submodule for WASM modules.
temper-wasm-sdk = { path = "temper/crates/temper-wasm-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[profile.release]
# Tight WASM build: optimize for size.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.test]
# Canonical library tests run on host; debug profile for fast iteration.
opt-level = 1
