[package]
name = "genesis-git-auth"
description = "Shared GitToken-backed principal resolution for genesis git wire and REST WASM integrations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
serde_json = { workspace = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
