[package]
name = "app_registry"
description = "WASM integration: Genesis App registry Composite sub-write producer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
serde_json = { workspace = true }
