[package]
name = "gen_variant"
description = "WASM module: directed-evolution variant generator (mutagen orchestrator). Composite sub-write producer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
serde_json = { workspace = true }
