[package]
name = "git_receive_pack"
description = "WASM integration: git smart-HTTP receive-pack surface for temper-git."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
genesis-git-object = { path = "../../crates/git_object" }
tg-wire = { path = "../../wire" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
