[package]
name = "git_refs_advertise"
description = "WASM integration: git smart-HTTP refs advertisement for temper-git."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
genesis-git-auth = { path = "../../crates/git_auth" }
tg-wire = { path = "../../wire" }
serde_json = { workspace = true }
