[package]
name = "github_rest_refs"
description = "WASM integration: GitHub REST v3 branch and git-ref endpoints for Genesis."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
temper-wasm-sdk = { workspace = true }
genesis-git-auth = { path = "../../crates/git_auth" }
serde_json = { workspace = true }
sha2 = { workspace = true }
